Prevent loading animation from flashing in and out of view during short loads

--- a/styles/2_style.styl
+++ b/styles/2_style.styl
@@ -231,8 +231,11 @@ section h2,
   z-index 99999
   background #fff
   img
+    opacity 0
     width 128px
     animation fadeIn ease .2s
+    animationDelay .2s
+    animationFillMode forwards
 
 .visual
   img, iframe
